--- a/src/UI/statusPopup/statusPopup.css
+++ b/src/UI/statusPopup/statusPopup.css
@@ -1,12 +1,14 @@
 .status-popup {
-    position: absolute;
-    right: 0;
-    top: 5%;
-    z-index: 300;
-    background-color: white;
-    padding: 20px; 
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
     border-radius: 5px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 2000;
+
 }
 
 .status-popup--loading {
