--- a/src/pages/tasks-list/components/create-task/create-task.css
+++ b/src/pages/tasks-list/components/create-task/create-task.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 200px;
     gap: 0.5rem;
 }
 
@@ -15,7 +14,7 @@
     font-weight: 400;
 }
 
-.create-task-form__input {
-    width: 12rem;
-    height: 1.5rem;
+.create-task-form__description {
+    height: 100px;
+    resize: none;
 }
