--- a/src/index.css
+++ b/src/index.css
@@ -19,21 +19,24 @@ h1, section{
 }
 
 /*----------------- buttons ------------------------*/
-.primary-button {
+.button {
   align-items: center;
   appearance: button;
-  background-color: #365eff;
   border-radius: 8px;
-  border-style: none;
   box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
-  box-sizing: border-box;
-  color: #fff;
   cursor: pointer;
-  display: flex;
-  line-height: 1.15;
   margin: 0;
-  padding: 10px 21px;
+  padding: 8px 16px;
   text-align: center;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+}
+
+.primary-button {
+  background-color: #365eff;
+  border-style: none;
+  color: #fff;  
 }
 
 .primary-button__with-icon {
@@ -48,12 +51,34 @@ h1, section{
   background-color: #4a71ff;
 }
 
+.secondary-button {
+  background-color: #fff;
+  border: 1px solid #f3f4f6;
+  color: black;
+}
+
+.secondary-button:hover {
+  border: 1px solid #e1e3e8;
+}
+
+.secondary-button:hover {
+  border: 1px solid #cfd1d6;
+}
+
 /*----------------- input ------------------------*/
 .input-field {
   border: 1px solid #f3f4f6;
   border-radius: 4px;
   padding: 8px 16px;
   background-color: #fff;
+}
+
+.input-field:hover {
+  border: 1px solid #e1e3e8;
+}
+
+.input-field:hover {
+  border: 1px solid #cfd1d6;
 }
 
 /*----------------- width & height ------------------------*/
